bases/traefik/argocd-ingress-kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-ingress
  annotations:
    traefik.io/router.entrypoints: web,websecure
spec:
  # ingressClassName: traefik
  rules:
    - host: argocd.mghcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
