bases/traefik/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # traefik.ingress.kubernetes.io/redirect-entry-point: https
  labels:
    app: argocd
  name: argocd
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.mghcloud.com # Change by your domain
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.mghcloud.com
      secretName: argocd-mghcloud-com-tls
